<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:orientation="vertical"
    android:background="@color/background_color">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/logo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo_name"
                android:textColor="@color/text_color"
                android:textSize="20dp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"></TextView>
            <TextView
                android:textColor="@color/text_color_transparent"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/logo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logo_dsc"
                android:text="@string/logo_dsc"></TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/logo_dsc"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/Search_home"
                    android:layout_width="352dp"
                    android:layout_height="63dp"
                    android:background="@drawable/email_button"
                    android:ems="10"></EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/search_text" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/search_icon" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:elevation="8dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/japan"></ImageView>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/japanese_food"
                    android:textAlignment="center"
                    android:textColor="@color/title_color"
                    android:textSize="10dp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:elevation="8dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/hk">
                    </ImageView>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/local_food"
                    android:textAlignment="center"
                    android:textColor="@color/title_color"
                    android:textSize="10dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:elevation="8dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/thai">
                    </ImageView>

                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/thai_food"
                    android:textSize="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/title_color"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:elevation="8dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/viet" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="10dp"
                    android:textColor="@color/title_color"
                    android:text="@string/viet_food"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/featured_background"
                android:layout_width="170dp"
                android:layout_height="300dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bkg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"
                    android:lineHeight="24sp"
                    android:text="@string/discount"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/discount_dsc"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/discount_dsc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/discount_dsc2"
                    android:textColor="#A3FFFFFF"
                    android:textSize="10dp" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:gravity="end"
                    android:text="@string/discount_dsc3"
                    android:textColor="@color/text_color_transparent"
                    android:textSize="12dp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/featured_recycler"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/featured_background"
                android:background="@color/background_color" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/current_location"
                    android:textStyle="bold"
                    android:textColor="@color/title_color"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/view_all"
                    android:textColor="@color/text_color_transparent"/>


            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/most_viewed_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>


